--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ body {
     height: 100vh;
     min-width: 300px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     /*align-items: center;*/
-    flex-wrap: wrap;
     column-gap: 15px;
     row-gap: 15px;
     background-color: red;
@@ -62,6 +63,7 @@ header {
 
 #burgerLogo {
     max-width: 100%;
+    background-size: cover;
     background-image: url(assets/images/hamburger-04-icon.png);
 }
 
